--- a/src/routes/Activity.less
+++ b/src/routes/Activity.less
@@ -35,6 +35,13 @@
       margin-bottom:10px;
       font-size: 18px;
     }
+    .briefTitle2{
+      color:#872D2D;
+      margin-bottom:10px;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 14px;
+    }
     .brief{
       color:#333;
       white-space: pre-line;
